<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/Done"
            android:id="@+id/DoneBtn"
            android:drawableStart="@drawable/done"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/done" />
        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_cancel_black_24dp"
            android:text="@string/Cancel"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_cancel_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Event"/>
        <EditText
            android:id="@+id/EventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EventName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Date"/>
        <EditText
            android:id="@+id/EventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/Date"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Time"/>
        <EditText
            android:id="@+id/EventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:inputType="time"
            android:hint="@string/Time"
            />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        />

</LinearLayout>