<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    tools:context=".MainActivity"

    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/app"
        android:background="@color/BackGround"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/AddEventImgBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:scaleType="fitXY"
                android:background="@color/BackGround"
                android:src="@drawable/add" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />


        </LinearLayout>
        <TextView
            android:id="@+id/AddEventTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddEvent"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:id="@+id/UpcomingBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/UpcomingEvents"
            android:src="@drawable/upcoming"
            android:background="@color/BackGround"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/OptionBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/options"
                android:background="@color/BackGround"
                android:scaleType="fitXY"

                />
            <TextView
                android:id="@+id/OptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Option"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/HelpBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/help"
                android:background="@color/BackGround"
                android:scaleType="fitXY"
                />
            <TextView
                android:id="@+id/HelpTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Help"
                android:layout_gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/ExitBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/BackGround"
                android:scaleType="fitXY"
                android:src="@drawable/exit"
                />
            <TextView
                android:id="@+id/ExitTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exit"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>